5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3558/executions/1578_1327.log
== TEST (2019-03-25 19:18:10) 
-- CODE:
h+f=90
h=55
pint(h+f-h)
-- ERROR:
File "XXXX", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:18:13) 
-- CODE:
h+f=90
h=55
pint(h+f-h)
-- EXECUTION TIME:
0.176503
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:18:49) 
-- CODE:
h+f=90
h=55
print(h+f-h)
-- ERROR:
File "XXXX", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:18:51) 
-- CODE:
h+f=90
h=55
print(h+f-h)
-- EXECUTION TIME:
0.234123
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:19:23) 
-- CODE:
h+f=90
h=55
print(90-h)
-- ERROR:
File "XXXX", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:19:25) 
-- CODE:
h+f=90
h=55
print(90-h)
-- EXECUTION TIME:
0.145366
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:16) 
-- CODE:
h+f=90
h=55
print(f=90-h)
-- ERROR:
File "XXXX", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:18) 
-- CODE:
h+f=90
h=55
print(f=90-h)
-- EXECUTION TIME:
0.132193
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    h+f=90
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:24:08) 
-- CODE:
h=55
f= 90-h
print(f)


-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:12) 
-- CODE:
h=55
f= 90-h
print(f)


-- EXECUTION TIME:
0.171479
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
